fix rate and generate jar